feat: add create software wizard
